--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     #   WORDPRESS_DB_PASSWORD: wppassword
     #   WORDPRESS_DB_NAME: wordpress
     volumes:
-      - wordpress-data:/var/www/html
+      - ./wordpress-data:/var/www/html
       - ./hyperdb/db-config.php:/var/www/html/wp-content/db-config.php
       - ./hyperdb/db.php:/var/www/html/wp-content/db.php
     ports:
